# utils-qt

./: .gitignore  .gitmodules  CMakeLists.txt  License.txt  README.md
.codechecker/: codechecker.yml  skipcompile  skipfile
.github/workflows/: ci.yml
headers/: datatostring.h  enum_utils.h  futurebridge.h  futureutils_sequential.h  multibinding_item.h  qmlutils.h
headers/UtilsQt/: AugmentedModel.h  CachedModel.h  JsonValidator.h  MergedListModel.h  Multicontext.h  OnProperty.h  PlusOneProxyModel.h  SetterWithDeferredSignal.h  StdinListener.h  StdinListenerNative.h  convertcontainer.h  datatostring.h  dpitools.h  enum_utils.h  invoke_method.h  jsonvalidator.h  late_setter.h  mergedlistmodel.h  multicontext.h  qml.h  qvariant_conv.h  qvariant_migration.h  qvariant_traits.h
headers/UtilsQt/Futures/: Broker.h  Converter.h  Merge.h  RetryingFuture.h  Sequential.h  SignalToFuture.h  Traits.h  Utils.h  future2property.h  futureutils_sequential.h
headers/UtilsQt/Internal/: move.h
headers/UtilsQt/Qml/: ImageProviderBorderImage.h  ImageProviderScaled.h  QmlControls.h
headers/UtilsQt/Qml-Cpp/: FileWatcher.h  FilterBehavior.h  ListModelItemProxy.h  ListModelTools.h  MaskInvertedRoundedRect.h  MaskInverter.h  NumericValidatorInt.h  NumericalValidator.h  PathElider.h  PropertyInterceptor.h  QmlUtils.h  SteadyTimer.h  ValueSequenceWatcher.h
headers/UtilsQt/Qml-Cpp/Geometry/: Geometry.h  Polygon.h
headers/UtilsQt/Qml-Cpp/Multibinding/: Multibinding.h  MultibindingItem.h
headers/utils-qt/: convertcontainer.h  dpitools.h  extendedmodel.h  future2property.h  futurebridge.h  futuresunifier.h  futureutils.h  futureutils_combine.h  futureutils_combine_container.h  futureutils_sequential.h  invoke_method.h  jsonvalidator.h  late_setter.h  mergedlistmodel.h  mergingfutures.h  multibinding.h  multibinding_item.h  on_property.h  qml.h  qmlutils.h  retrying_future.h  struct_ops2_qhash.h  struct_ops2_qvariant.h
headers/utils-qt/qml/: Multibinding.h  qml-controls.h
headers/utils-qt/qml-cpp/: ExclusiveGroupIndex.h  FileWatcher.h  ListModelItemProxy.h  ListModelTools.h  NumericValidatorInt.h  NumericalValidator.h  QmlUtils.h
headers/utils-qt/qml-cpp/Geometry/: Geometry.h  Polygon.h
src/: AugmentedModel.cpp  CachedModel.cpp  JsonValidator.cpp  MergedListModel.cpp  Multicontext.cpp  NumericalValidator.cpp  PlusOneProxyModel.cpp  StdinListener.cpp  StdinListenerNative.cpp  datatostring.cpp  dpitools.cpp  extendedmodel.cpp  futurebridge.cpp  jsonvalidator.cpp  mergedlistmodel.cpp  multibinding.cpp  multibinding_item.cpp  qml.cpp  qmlutils.cpp  qvariant_migration.cpp  qvariant_traits.cpp
src/Futures/: SignalToFuture.cpp
src/Qml/: ImageProviderBorderImage.cpp  ImageProviderScaled.cpp  QmlControls.cpp  QmlControls.qrc
src/Qml-Cpp/: FileWatcher.cpp  FilterBehavior.cpp  ListModelItemProxy.cpp  ListModelTools.cpp  MaskInvertedRoundedRect.cpp  MaskInverter.cpp  NumericValidatorInt.cpp  NumericalValidator.cpp  PathElider.cpp  PropertyInterceptor.cpp  QmlUtils.cpp  SteadyTimer.cpp  ValueSequenceWatcher.cpp
src/Qml-Cpp/Geometry/: Geometry.cpp  Polygon.cpp
src/Qml-Cpp/Multibinding/: Multibinding.cpp  MultibindingItem.cpp
src/Qml/UtilsQt/: Assert.qml  DisabledVis.qml  GrainEffect.qml  Rectangle2.qml  Repeater2.qml  qmldir
src/qml/: Multibinding.cpp  MultibindingItem.cpp  NumericalValidator.cpp  QmlUtils.cpp  qml-controls.cpp  qml-controls.qrc
src/qml-cpp/: ExclusiveGroupIndex.cpp  FileWatcher.cpp  ListModelItemProxy.cpp  ListModelTools.cpp  NumericValidatorInt.cpp  NumericalValidator.cpp  PathElider.cpp  QmlUtils.cpp
src/qml-cpp/Geometry/: Geometry.cpp  Polygon.cpp
src/qml-cpp/Multibinding/: Multibinding.cpp  MultibindingItem.cpp
src/qml/Multibinding/: Multibinding.cpp  MultibindingItem.cpp
src/qml/UtilsQt/: Rectangle2.qml  Repeater2.qml  qmldir
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  utils_qt.cpp
tests/test/: CMakeLists.txt  Test_Futures_0_Utils.cpp  Test_Futures_1_Convert.cpp  Test_Futures_2_Merge.cpp  Test_Futures_3_RetryingFuture.cpp  Test_Futures_4_CancellationChain.cpp  Test_Futures_5_SignalToFuture.cpp  Test_Futures_6_Sequential.cpp  Test_Futures_7_Broker.cpp  Test_Futures_Convert.cpp  Test_Futures_Merge.cpp  Test_Futures_RetryingFuture.cpp  Test_Futures_Utils.cpp  test00_lifetimeTracker.cpp  test01c_futureUtilsSeq.cpp  test01e_futureUtils_combine_container.cpp  test01f_futuresunifier.cpp  test01g_retrying_future.cpp  test01x_cancellation_chain.cpp  test02_convertFuture.cpp  test02_dataToString.cpp  test03_onProperty.cpp  test04_onProperty.cpp  test04_qvariant_conv.cpp  test06_JsonValidator.cpp  test06_json_validator.cpp  test06_qvariant_conv.cpp  test07_FileWatcher.cpp  test08_PathElider.cpp  test08_futureUtils_combine.cpp  test09_QmlUtils.cpp  test09_json_validator.cpp  test10_Geometry.cpp  test10_futuresunifier.cpp  test11_AugmentedModel.cpp  test11_futureUtils_combine_container.cpp  test12_CachedModel.cpp  test12_FileWatcher.cpp  test12_Multicontext.cpp  test13_PathElider.cpp  (+13 more)
tests/test/internal/: LifetimeTracker.cpp  LifetimeTracker.h  TestWaitHelpers.h
tests/test2/: CMakeLists.txt  main.cpp  main2.cpp
tests/test3_qml/: CMakeLists.txt  main3.cpp  main3.qml  main3.qrc
tests/test3_qml_manual/: CMakeLists.txt  main3.cpp  main3.qml
tests/test4_qml_auto/: CMakeLists.txt  MLMResetter.h  main4.cpp  main4.qrc  tst_01_ListModelItemProxy.qml  tst_02_ListModelTools.qml  tst_03_Multibinding.qml  tst_04_Repeater2.qml  tst_05_MergedListModel.qml  tst_06_MergedListModel_2.qml  tst_07_MergedListModel_3_Resetter.qml  tst_08_PlusOneProxyModel.qml  tst_09_CallOnce.qml  tst_0_init.qml  tst_10_FilterBehavior.qml  tst_11_PropertyInterceptor.qml  tst_12_MaskItems.qml  tst_13_CallDelayed.qml  tst_14_ValueSequenceWatcher.qml  tst_1_list_model_item_proxy.qml  tst_2_list_model_tools.qml  tst_3_multibinding.qml  tst_4_repeater2.qml  tst_5_mergedlistmodel.qml  tst_6_mergedlistmodel_2.qml  tst_7_mergedlistmodel_3_resetter.qml  tst_list_model_tools.qml  tst_multibinding.qml
tests/test5_qml/: CMakeLists.txt  main5.cpp  main5.qml  main5.qrc
(+22 files in other folders)
