find_package(QT NAMES Qt6 Qt5 COMPONENTS Test REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Test)

FILE(GLOB_RECURSE SOURCES *.cpp)

set(PROJECT_TEST_NAME test-${PROJECT_NAME})

add_executable(${PROJECT_TEST_NAME} ${SOURCES})
set_property(TARGET ${PROJECT_TEST_NAME} PROPERTY CXX_STANDARD 17)
set_property(TARGET ${PROJECT_TEST_NAME} PROPERTY AUTOMOC ON)

target_link_libraries(${PROJECT_TEST_NAME} gtest gmock_main ${PROJECT_NAME} Qt${QT_VERSION_MAJOR}::Test)

add_test(NAME ${PROJECT_TEST_NAME}-runner COMMAND ${PROJECT_TEST_NAME})
